--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,11 @@ body {
     color: var(--text);
 }
 
+.main-container {
+    margin: 0 auto;
+    max-width: 48rem;
+}
+
 h1 {
     font-size: 2.5rem;
     margin: 1rem 0;
