--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,40 @@ body {
     color: var(--text);
 }
 
+@view-transition {
+    navigation: auto;
+}
+
+@keyframes slide-in-from-right {
+    from {
+        transform: translateX(100vw);
+    }
+    to {
+        transform: translateX(0vw);
+    }
+}
+
+@keyframes fade-out {
+    from {
+        scale: 1;
+        opacity: 1;
+    }
+    to {
+        scale: 0.8;
+        opacity: 0;
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    ::view-transition-old(root) {
+        animation: 0.5s ease-in both fade-out;
+    }
+
+    ::view-transition-new(root) {
+        animation: 0.5s ease-in both slide-in-from-right;
+    }
+}
+
 .main-container {
     margin: 0 auto;
     max-width: 48rem;
