fix: place prefers-reduced-motion check around correct styles

--- a/src/style.css
+++ b/src/style.css
@@ -85,8 +85,16 @@ body {
     color: var(--text);
 }
 
-@view-transition {
-    navigation: auto;
+@media (prefers-reduced-motion: no-preference) {
+    @view-transition {
+        navigation: auto;
+    }
+}
+
+.main-container {
+    margin: 0 auto;
+    max-width: 48rem;
+    view-transition-name: content;
 }
 
 @keyframes slide-in-from-right {
@@ -109,19 +117,12 @@ body {
     }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    ::view-transition-old(root) {
-        animation: 0.5s ease-in both fade-out;
-    }
-
-    ::view-transition-new(root) {
-        animation: 0.5s ease-in both slide-in-from-right;
-    }
+::view-transition-old(content) {
+    animation: 0.5s ease-in both fade-out;
 }
 
-.main-container {
-    margin: 0 auto;
-    max-width: 48rem;
+::view-transition-new(content) {
+    animation: 0.5s ease-in both slide-in-from-right;
 }
 
 h1 {
