--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@ body {
 }
 
 .main-container {
-    margin: 0 auto;
+    margin: 6rem auto;
     max-width: 48rem;
     view-transition-name: content;
 }
@@ -121,6 +121,15 @@ body {
     }
     to {
         transform: translateX(0vw);
+    }
+}
+
+@keyframes slide-out-to-right {
+    from {
+        transform: translateX(0vw);
+    }
+    to {
+        transform: translateX(100vw);
     }
 }
 
@@ -153,15 +162,32 @@ section {
     padding: 1rem;
 }
 
-.navbar {
+.page-header {
+    container-name: page-header;
+    container-type: inline-size;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    padding: 0.5rem 1rem;
+    width: 100vw;
+    display: flex;
+    justify-content: end;
+}
+
+.desktop-navbar {
     margin: 1rem 0;
     padding: 0.5rem 1rem;
 }
 
-.navbar > ul {
+.mobile-navbar > ul,
+.desktop-navbar > ul {
     list-style: none;
-    display: flex;
     align-items: center;
+    display: flex;
+}
+
+.desktop-navbar > ul {
     padding: 0.3rem 1rem;
     width: fit-content;
     height: fit-content;
@@ -170,6 +196,89 @@ section {
     background-color: var(--bg);
     margin: 0 auto;
     box-shadow: var(--shadow-s);
+}
+
+.mobile-navbar > ul {
+    flex-direction: column;
+    margin: 2rem 0;
+}
+
+@container page-header (width < 768px) {
+    .desktop-navbar {
+        display: none;
+    }
+
+    .mobile-menu__button-open {
+        display: block;
+    }
+
+    .mobile-menu__overlay {
+        display: block;
+    }
+}
+
+@container page-header (width >= 768px) {
+    .desktop-navbar {
+        display: block;
+    }
+
+    .mobile-menu__button-open {
+        display: none;
+    }
+
+    .mobile-menu__overlay {
+        display: none;
+    }
+}
+
+.mobile-menu__button-svg {
+    height: 35px;
+    width: 35px;
+    color: var(--text-muted);
+}
+
+.mobile-menu__button-open {
+    background-color: var(--bg-dark);
+}
+
+.mobile-menu__button-close {
+    background-color: var(--bg);
+}
+
+.mobile-menu__overlay {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 100vw;
+    z-index: 10;
+    background-color: transparent;
+    backdrop-filter: brightness(50%);
+    display: flex;
+    justify-content: end;
+    transition: 0.5s;
+}
+
+.mobile-menu__overlay.open {
+    left: 0vw;
+}
+
+.mobile-menu__overlay.close {
+    left: 100vw;
+}
+
+.mobile-menu__drawer {
+    width: 60%;
+    height: 100%;
+    background-color: var(--bg);
+    border-left: solid 1px var(--border-muted);
+    padding: 0.5rem 1rem;
+}
+
+.mobile-menu__drawer-close-button-container {
+    width: 100%;
+    display: flex;
+    justify-content: end;
 }
 
 .nav-link {
@@ -181,6 +290,14 @@ section {
 
 .nav-link:hover {
     color: var(--primary);
+}
+
+.mobile-menu__drawer li {
+    margin: 1.5rem 0;
+}
+
+.mobile-menu__drawer .nav-link {
+    font-size: 1.5rem;
 }
 
 a:has(> .navbar-underline) {
